--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="http://img.shields.io/gratipay/ridermansb.svg" alt="Pay me a coffee">
-<a href="https://coveralls.io/r/Ridermansb/wox.skype"><img src="https://coveralls.io/repos/Ridermansb/wox.skype/badge.svg" alt="Coverage Status"></a>
-<img src="https://ci.appveyor.com/api/projects/status/github/Ridermansb/wox.skype" alt="Build Status">
-<a href="https://gitter.im/Ridermansb/wox.skype?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/Ridermansb/wox.skype"></a> </p>
+        <p>
+        <img src="http://img.shields.io/gratipay/ridermansb.svg" alt="Pay me a coffee">
+        <a href="https://gitter.im/Ridermansb/wox.skype?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/Ridermansb/wox.skype"></a>
+        </p>
 
 <p>Performs search of Skype contacts and start a conversation.</p>
 
