--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">Wox plugin for skype</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Ridermansb/wox.skype/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Ridermansb/wox.skype/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
