Add link into tip

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>
-        <img src="http://img.shields.io/gratipay/ridermansb.svg" alt="Pay me a coffee">
+        <a href="http://bit.ly/1MTgIvN"><img src="http://img.shields.io/gratipay/ridermansb.svg" alt="Pay me a coffee"></a>
         <a href="https://gitter.im/Ridermansb/wox.skype?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/Ridermansb/wox.skype"></a>
         </p>
 
