--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
           <h2 id="project_tagline">Wox plugin for skype</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a tar.gz file</a>
+              <a href="https://github.com/Ridermansb/wox.skype/releases">
+                <img src="images/download-128.png">
+              </a>
+              <!-- <a class="zip_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Ridermansb/wox.skype/releases">Download this project as a tar.gz file</a> -->
             </section>
         </header>
     </div>
