--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Ridermansb/wox.skype">View on GitHub</a>
 
           <h1 id="project_title">Wox.skype</h1>
-          <h2 id="project_tagline">Wox plugin for skype</h2>
+          <h2 id="project_tagline">Search Skype contacts and start a conversation.</h2>
 
             <section id="downloads">
               <a href="https://github.com/Ridermansb/wox.skype/releases">
@@ -39,9 +39,13 @@
         <a href="https://gitter.im/Ridermansb/wox.skype?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/Ridermansb/wox.skype"></a>
         </p>
 
-<p>Performs search of Skype contacts and start a conversation.</p>
+<h3>Features</h3>
+<ul>
+  <li>Search by Aliases, DisplayName, FullName, PhoneHome, PhoneMobile or PhoneOffice and start conversation</li>
+  <li>Just typing <code>sky</code> to open skype appears.</li>
+</ul>
 
-<p>When no query is performed (just typing <code>sky</code>), option to open skype appears.</p>
+
 
 <p><strong>Only work on x86 platform, see issue <a href="https://github.com/Ridermansb/wox.skype/issues/1">#1</a></strong>, so install x86 version of Wox<br>
 <em>if you use a <a href="https://chocolatey.org/">chocolatey</a>, <code>choco install wox --x86 -y -f --acceptlicense</code></em></p>
