Add install information and change download icon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   <li>Just typing <code>sky</code> to open skype appears.</li>
 </ul>
 
+<h3>Install</h3>
+<p>You can choose any of the two options to install:</p>
+<ul>
+  <li>Using a default <a href="https://www.getwox.com/plugin/27">Wox install</a> way <code>wpm install Wox.Skype</code></li>
+  <li>Install manually downloading the package .wox on <a href="https://www.getwox.com/plugin/27">wox page</a> or in <a href="https://github.com/Ridermansb/wox.skype/releases">Github Releases</a> and then drag the plugin package to Wox search box</li>
+</ul>
 
 
 <p><strong>Only work on x86 platform, see issue <a href="https://github.com/Ridermansb/wox.skype/issues/1">#1</a></strong>, so install x86 version of Wox<br>
